--- a/styles/sass/style.sass
+++ b/styles/sass/style.sass
@@ -32,7 +32,9 @@ main
 .form
   position: relative
   @extend %flex-column
-  gap:  300px
+  & > .repos-list .card:first-child
+     margin-top: 300px
+
 
 .searchInput
   width: 500px
@@ -57,7 +59,9 @@ main
   gap: 10px
 
 .card__btn-delete
-  position: relative
+  position: absolute
+  top:  40px
+  right: 20px
   width: 50px
   height: 50px
   flex-shrink: 0
