--- a/styles/sass/style.sass
+++ b/styles/sass/style.sass
@@ -77,6 +77,7 @@ main
     left: -2px
     top: 22px
     width: 100%
+    background: darkred
     border: 2px solid #FF0000
   &::before
     transform: rotate(45deg)
