--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,9 @@
-.card-content,
-.form,
-main {
+.card-content, .form, main {
   display: flex;
   flex-direction: column;
 }
 
-html,
-body {
+html, body {
   height: 100vh;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -30,7 +27,7 @@ main {
 }
 
 .section {
-  background-color: #c4c4c4;
+  background-color: #C4C4C4;
   padding: 60px 80px;
   width: 660px;
   margin-bottom: 50px;
@@ -59,7 +56,7 @@ main {
   align-items: center;
   gap: 50px;
   font-size: 24px;
-  background-color: #e27beb;
+  background-color: #E27BEB;
   border: 1px solid black;
 }
 
@@ -79,14 +76,14 @@ main {
   cursor: pointer;
   transition-duration: 1s;
 }
-.card__btn-delete::before,
-.card__btn-delete::after {
+.card__btn-delete::before, .card__btn-delete::after {
   content: "";
   position: absolute;
   left: -2px;
   top: 22px;
   width: 100%;
-  border: 2px solid #ff0000;
+  background: darkred;
+  border: 2px solid #FF0000;
 }
 .card__btn-delete::before {
   transform: rotate(45deg);
@@ -94,8 +91,7 @@ main {
 .card__btn-delete::after {
   transform: rotate(-45deg);
 }
-.card__btn-delete:active::before,
-.card__btn-delete:active::after {
+.card__btn-delete:active::before, .card__btn-delete:active::after {
   transform: scale(0.8);
 }
 
@@ -126,7 +122,7 @@ option::-webkit-scrollbar {
 }
 
 .active {
-  background-color: #65cdf9;
+  background-color: #65CDF9;
 }
 
 /*# sourceMappingURL=style.css.map */
