--- a/styles/sass/style.sass
+++ b/styles/sass/style.sass
@@ -112,5 +112,6 @@ option::-webkit-scrollbar
   width: 0
   height: 0
 
-.active
+.option-item:focus-visible,
+.option-item:hover
   background-color: #65CDF9
