--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,8 @@ option::-webkit-scrollbar {
   height: 0;
 }
 
-.active {
+.option-item:focus-visible,
+.option-item:hover {
   background-color: #65CDF9;
 }
 
