--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,12 @@
-.card-content, .form, main {
+.card-content,
+.form,
+main {
   display: flex;
   flex-direction: column;
 }
 
-html, body {
+html,
+body {
   height: 100vh;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -27,7 +30,7 @@ main {
 }
 
 .section {
-  background-color: #C4C4C4;
+  background-color: #c4c4c4;
   padding: 60px 80px;
   width: 660px;
   margin-bottom: 50px;
@@ -36,7 +39,7 @@ main {
 .form {
   position: relative;
 }
-.form > .repos-list .card:first-child {
+.repos-list > .card:first-child {
   margin-top: 300px;
 }
 
@@ -56,7 +59,7 @@ main {
   align-items: center;
   gap: 50px;
   font-size: 24px;
-  background-color: #E27BEB;
+  background-color: #e27beb;
   border: 1px solid black;
 }
 
@@ -76,20 +79,26 @@ main {
   cursor: pointer;
   transition-duration: 1s;
 }
-.card__btn-delete::before, .card__btn-delete::after {
+.card__btn-delete::before,
+.card__btn-delete::after {
   content: "";
   position: absolute;
   left: -2px;
   top: 22px;
   width: 100%;
   background: darkred;
-  border: 2px solid #FF0000;
+  border: 2px solid #ff0000;
 }
 .card__btn-delete::before {
   transform: rotate(225deg);
 }
 .card__btn-delete::after {
   transform: rotate(-45deg);
+}
+
+.card__btn-delete:active::before,
+.card__btn-delete:active::after {
+  transform: rotate(0deg);
 }
 
 datalist {
@@ -99,6 +108,7 @@ datalist {
   border-radius: 0 0 5px 5px;
   border-top: none;
   width: 500px;
+  display: block;
 }
 
 option {
@@ -118,9 +128,9 @@ option::-webkit-scrollbar {
   height: 0;
 }
 
-.option-item:focus,
+.option-item:focus-visible,
 .option-item:hover {
-  background-color: #65CDF9;
+  background-color: #65cdf9;
 }
 
 /*# sourceMappingURL=style.css.map */
